#141: [Process] Background processing (http://github.com/Polymap4/polymap4-p4/issues/141)
Progress: UI code in panels, triggered by events

  - FIX: ILayer of bgjob over session/UnitOfWork boundaries
  - REFACTOR: unify class names

--- a/org.polymap.p4/plugin.xml
+++ b/org.polymap.p4/plugin.xml
@@ -83,7 +83,7 @@
             stackPriority="-1000">
       </panel>
       <panel
-            class="org.polymap.p4.process.ModuleProcessPanel"
+            class="org.polymap.p4.process.ProcessModulePanel"
             id="org.polymap.p4.ProcessModulePanel">
       </panel>
       <panel
@@ -92,7 +92,7 @@
             stackPriority="95">
       </panel>
       <panel
-            class="org.polymap.p4.process.ProgressPanel"
+            class="org.polymap.p4.process.ProcessProgressPanel"
             id="org.polymap.p4.ProgressPanel"
             stackPriority="-900">
       </panel>
