--- a/org.polymap.p4/build.properties
+++ b/org.polymap.p4/build.properties
@@ -14,4 +14,5 @@ bin.includes = META-INF/,\
                lib/powermock-module-junit4-common-1.6.2.jar,\
                lib/powermock-reflect-1.6.2.jar,\
                resources/,\
-               .classpath
+               .classpath,\
+               src/
