--- a/org.polymap.p4.data.importer/build.properties
+++ b/org.polymap.p4.data.importer/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                lib/commons-compress-1.9.jar,\
                resources/,\
-               .classpath
+               .classpath,\
+               src/
