#145: [Import] WFS (http://github.com/Polymap4/polymap4-p4/issues/145)
Add ILayer processor config to pipeline.

  - NEW: LayerProcessorDashlet/Panel
  - P4Plugin: StoreCacheProcessor.init()

--- a/org.polymap.p4/plugin.xml
+++ b/org.polymap.p4/plugin.xml
@@ -96,6 +96,10 @@
             id="org.polymap.p4.ProgressPanel"
             stackPriority="-900">
       </panel>
+      <panel
+            class="org.polymap.p4.layer.LayerProcessorPanel"
+            id="org.polymap.p4.LayerProcessorPanel">
+      </panel>
    </extension>
    <!--extension
          point="org.polymap.service.fs.contentProviders">
