#145: [Import] WFS (http://github.com/Polymap4/polymap4-p4/issues/145)
NEW: Store and Image cache concerns

  - TODO: List of processors shows duplicate entries after operation

--- a/org.polymap.p4.data.importer/plugin.xml
+++ b/org.polymap.p4.data.importer/plugin.xml
@@ -20,6 +20,14 @@
             class="org.polymap.p4.data.importer.raster.AddLayerForImportedRasterConcern"
             id="org.polymap.p4.data.importer.concern1">
       </concern>
+      <concern
+            class="org.polymap.p4.data.importer.wfs.WfsNewLayerOperationConcern"
+            id="org.polymap.p4.data.importer.WfsNewLayerOperationConcern">
+      </concern>
+      <concern
+            class="org.polymap.p4.data.importer.image.CacheNewLayerOperationConcern"
+            id="org.polymap.p4.data.importer.CacheNewLayerOperationConcern">
+      </concern>
    </extension>
    <extension
          point="org.polymap.p4.data.importer.importers">
